<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email">Login Email:</string>
    <string name="enter_password">Enter Email</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="greeting_fragment">Greeting Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="welcome">Welcome</string>
    <string name="to_the_shoe">Welcome to the Shoe</string>
    <string name="continue_to_instructions">Instructions</string>
    <string name="instructions_fragment">Instructions Fragment</string>
    <string name="instructions">Instructions</string>
    <string name="on_the_next_page_click_the_plus_button">On the next page, click the plus button to add a shoe. Fill out the form and click save.</string>
    <string name="show_shoes">Show Shoes</string>
    <string name="shoes">Shoes</string>
    <string name="add_plus_button">add plus button</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>
